--- a/main.css
+++ b/main.css
@@ -5,6 +5,9 @@
     padding: 50px;
     font-family: sans serif;
     font-size: 18px;
+    color: #481380;
+    background-color: #ffe2ff;
+    border: 1px solid #7f78d2;
 }
 
 .field {
@@ -17,7 +20,7 @@ button {
     width: 100%;
     border: none;
     padding: 5px;
-    background-color: green;
+    background-color: #7f78d2;
     color: white;
     font-family: sans serif;
     font-size: 18px;
@@ -26,4 +29,5 @@ button {
 input {
     width: 270px;
     padding: 5px;
+    border: 1px solid 7f78d2;
 }
