--- a/main.css
+++ b/main.css
@@ -5,9 +5,9 @@
     padding: 50px;
     font-family: sans serif;
     font-size: 18px;
-    color: #481380;
-    background-color: #ffe2ff;
-    border: 1px solid #7f78d2;
+    color: black;
+    background-color:#D4F8E8;
+    border: 1px solid #1eb2a6;
     margin: 0 auto;
 }
 
@@ -21,10 +21,11 @@ button {
     width: 100%;
     border: none;
     padding: 5px;
-    background-color: #7f78d2;
+    background-color: #1eb2a6;
     color: white;
     font-family: sans serif;
     font-size: 18px;
+    margin: 10px 0;
 }
 
 input {
@@ -36,4 +37,9 @@ input {
 h1 {
     visibility: hidden;
     position: absolute;
+}
+
+.logo {
+    width: 200px;
+    margin: 20px;
 }
